--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "angular-md5": "^0.1.10",
     "font-awesome": "^4.7.0",
     "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
