--- a/package.json
+++ b/package.json
@@ -11,35 +11,44 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.6",
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
+    "@angular/compiler-cli": "^8.0.0",
     "@angular/core": "5.2.11",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@capacitor/android": "^1.0.0-beta.1",
-    "@capacitor/cli": "^1.0.0-beta.1",
-    "@capacitor/core": "^1.0.0-beta.1",
-    "@ionic-native/core": "~4.10.0",
-    "@ionic-native/splash-screen": "~4.10.0",
-    "@ionic-native/status-bar": "~4.10.0",
+    "@capacitor/android": "^1.0.0",
+    "@capacitor/cli": "^1.0.0",
+    "@capacitor/core": "^1.0.0",
+    "@ionic-native/core": "^4.20.0",
+    "@ionic-native/splash-screen": "^4.20.0",
+    "@ionic-native/status-bar": "^4.20.0",
+    "@ionic/angular": "^4.4.2",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "agm-direction": "^0.7.8",
     "angular-md5": "^0.1.10",
+    "cordova-plugin-compat": "1.2.0",
     "font-awesome": "^4.7.0",
-    "ionic-angular": "^3.9.2",
+    "ionic-angular": "^3.9.6",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.1.11",
-    "@types/googlemaps": "^3.30.11",
-    "typescript": "~2.6.2"
+    "@ionic/app-scripts": "^3.2.4",
+    "@types/googlemaps": "^3.36.4",
+    "typescript": "^3.5.1"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-compat": {}
+    }
+  }
 }
