--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/storage": "2.1.3",
     "agm-direction": "^0.7.8",
     "angular-md5": "^0.1.10",
+    "cordova-android": "^8.0.0",
     "cordova-plugin-compat": "1.2.0",
     "font-awesome": "^4.7.0",
     "ionic-angular": "^3.9.6",
@@ -43,12 +44,22 @@
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.4",
     "@types/googlemaps": "^3.36.4",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-ionic-keyboard": "2.0.5",
+    "cordova-plugin-ionic-webview": "1.1.19",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-whitelist": "1.3.3",
     "typescript": "^3.5.1"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-compat": {}
+      "cordova-plugin-compat": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
     }
   }
 }
