--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "agm-direction": "^0.7.8",
     "angular-md5": "^0.1.10",
     "cordova-android": "^8.0.0",
+    "cordova-browser": "6.0.0",
     "cordova-plugin-compat": "1.2.0",
     "font-awesome": "^4.7.0",
     "ionic-angular": "^3.9.6",
@@ -48,7 +49,7 @@
     "cordova-plugin-ionic-keyboard": "2.0.5",
     "cordova-plugin-ionic-webview": "1.1.19",
     "cordova-plugin-splashscreen": "5.0.2",
-    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-plugin-whitelist": "git+https://github.com/apache/cordova-plugin-whitelist.git",
     "typescript": "^3.5.1"
   },
   "description": "An Ionic project",
@@ -60,6 +61,10 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {}
-    }
+    },
+    "platforms": [
+      "browser",
+      "android"
+    ]
   }
 }
