--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Herbalife",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Jill Espejo",
+  "homepage": "",
   "private": true,
   "scripts": {
     "start": "ionic-app-scripts serve",
